_PostMessage() was holding the BLooperList lock while calling BMessenger::SendMessage(), which could lead to deadlocks (as in bug #1745).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23865 a95241bf-73f2-0310-859d-f6bbb57e9c96